@@ -15,6 +15,8 @@ Version 1.3
   This primarily makes ``zh_CN`` work again which was broken
   due to how it was defined in the likely subtags combined with
   our broken resolving.  This fixes #37.
+- Fixed a bug that caused pybabel to break when writing to stdout
+  on Python 3.
 
 Version 1.2
 -----------
